# jevois

./: CMakeLists.txt
CMakeModules/: JeVois.cmake  JeVoisHardware.cmake  README.md
Contrib/: reinstall.sh
doc/: ArduinoTutorial.dox  Case-Mounting.dox  Change110log.dox  Change111log.dox  Change112log.dox  Change113log.dox  Change114log.dox  Change115log.dox  Change117log.dox  Change118log.dox  Change119log.dox  Change11log.dox  Change120log.dox  Change12log.dox  Change13log.dox  Change14log.dox  Change15log.dox  Change16log.dox  Change17log.dox  Change18log.dox  Change19log.dox  CompilingJeVois.dox  CompilingJeVoisBase.dox  Concepts.dox  Debugging.dox  DocumentationRules.dox  Fanless.dox  FlashingToSD.dox  Handling.dox  Hardware.dox  HardwareFiles.dox  History.dox  JeVoisBaseDocs.dox  JeVoisDaemon.dox  JeVoisInventor.dox  JeVoisProBenchmarks.dox  JeVoisProBenchmarks118.dox  JeVoisProIntro.dox  Lenses.dox  Mainpage.dox  (+55 more)
doc/docbook/: ArduinoTutorial_8dox.xml  Async_8C.xml  Async_8C__incl.md5  Async_8H.xml  Async_8H__dep__incl.md5  Async_8H__incl.md5  BlockingBehavior_8H.xml  BlockingBehavior_8H__dep__incl.md5  BoundedBuffer_8H.xml  BoundedBuffer_8H__dep__incl.md5  BoundedBuffer_8H__incl.md5  CameraCalibration_8C.xml  CameraCalibration_8C__incl.md5  CameraCalibration_8H.xml  CameraCalibration_8H__dep__incl.md5  CameraCalibration_8H__incl.md5  CameraDevice_8C.xml  CameraDevice_8C__incl.md5  CameraDevice_8H.xml  CameraDevice_8H__dep__incl.md5  CameraDevice_8H__incl.md5  CameraSensor_8C.xml  CameraSensor_8C__incl.md5  CameraSensor_8H.xml  CameraSensor_8H__dep__incl.md5  CameraSensor_8H__incl.md5  Camera_8C.xml  Camera_8C__incl.md5  Camera_8H.xml  Camera_8H__dep__incl.md5  Camera_8H__incl.md5  Case-Mounting_8dox.xml  Change110log_8dox.xml  Change111log_8dox.xml  Change112log_8dox.xml  Change113log_8dox.xml  Change114log_8dox.xml  Change115log_8dox.xml  Change117log_8dox.xml  Change118log_8dox.xml  (+909 more)
doc/latex/: ArduinoTutorial_8dox.tex  Async_8C.tex  Async_8C__incl.md5  Async_8H.tex  Async_8H__dep__incl.md5  Async_8H__incl.md5  BlockingBehavior_8H.tex  BlockingBehavior_8H__dep__incl.md5  BoundedBuffer_8H.tex  BoundedBuffer_8H__dep__incl.md5  BoundedBuffer_8H__incl.md5  CameraCalibration_8C.tex  CameraCalibration_8C__incl.md5  CameraCalibration_8H.tex  CameraCalibration_8H__dep__incl.md5  CameraCalibration_8H__incl.md5  CameraDevice_8C.tex  CameraDevice_8C__incl.md5  CameraDevice_8H.tex  CameraDevice_8H__dep__incl.md5  CameraDevice_8H__incl.md5  CameraSensor_8C.tex  CameraSensor_8C__incl.md5  CameraSensor_8H.tex  CameraSensor_8H__dep__incl.md5  CameraSensor_8H__incl.md5  Camera_8C.tex  Camera_8C__incl.md5  Camera_8H.tex  Camera_8H__dep__incl.md5  Camera_8H__incl.md5  Case-Mounting_8dox.tex  Change110log_8dox.tex  Change111log_8dox.tex  Change112log_8dox.tex  Change113log_8dox.tex  Change114log_8dox.tex  Change115log_8dox.tex  Change117log_8dox.tex  Change118log_8dox.tex  (+900 more)
include/jevois/Component/: Component.H  Manager.H  Parameter.H  ParameterDef.H  ParameterRegistry.H  ParameterStringConversion.H  ValidValuesSpec.H
include/jevois/Core/: Camera.H  CameraCalibration.H  CameraDevice.H  CameraSensor.H  DynamicLoader.H  Engine.H  Gadget.H  ICM20948.H  ICM20948_regs.H  IMU.H  IMUdata.H  IMUi2c.H  IMUspi.H  InputFrame.H  Module.H  MovieInput.H  MovieOutput.H  OutputFrame.H  PythonModule.H  PythonParameter.H  PythonSupport.H  PythonWrapper.H  Serial.H  StdioInterface.H  UserInterface.H  VideoBuf.H  VideoBuffers.H  VideoDisplay.H  VideoDisplayGL.H  VideoDisplayGUI.H  VideoInput.H  VideoMapping.H  VideoOutput.H  VideoOutputNone.H  uvc.h
include/jevois/DNN/: Network.H  NetworkHailo.H  NetworkNPU.H  NetworkONNX.H  NetworkOpenCV.H  NetworkPython.H  NetworkTPU.H  Pipeline.H  PostProcessor.H  PostProcessorClassify.H  PostProcessorDetect.H  PostProcessorDetectYOLO.H  PostProcessorPython.H  PostProcessorSegment.H  PostProcessorStub.H  PostProcessorYuNet.H  PreProcessor.H  PreProcessorBlob.H  PreProcessorPython.H  Utils.H
include/jevois/Debug/: Log.H  Profiler.H  PythonException.H  SysInfo.H  Timer.H  Watchdog.H
include/jevois/Image/: ColorConversion.h  Jpeg.H  RawImage.H  RawImageOps.H
include/jevois/Types/: BlockingBehavior.H  BoundedBuffer.H  Enum.H  ObjDetect.H  ObjReco.H  Range.H  Semaphore.H  Singleton.H  StepRange.H
include/jevois/Util/: Async.H  CompilerUtil.H  Console.H  Coordinates.H  Demangle.H  ThreadPool.H  Utils.H
src/Apps/: jevois-add-videomapping.C  jevois-camtest.C  jevois-daemon.C  jevois-module-param.C  jevois-restore-console.C
src/jevois/Component/: Component.C  Manager.C
src/jevois/Core/: Camera.C  CameraDevice.C  CameraSensor.C  Engine.C  Gadget.C  ICM20948.C  IMU.C  IMUdata.C  IMUspi.C  InputFrame.C  Module.C  MovieInput.C  MovieOutput.C  OutputFrame.C  PythonModule.C  PythonOpenCV.C  PythonParameter.C  PythonSupport.C  PythonWrapper.C  Serial.C  StdioInterface.C  VideoBuf.C  VideoBuffers.C  VideoDisplay.C  VideoDisplayGL.C  VideoDisplayGUI.C  VideoMapping.C
src/jevois/DNN/: Network.C  NetworkHailo.C  NetworkNPU.C  NetworkONNX.C  NetworkOpenCV.C  NetworkPython.C  NetworkTPU.C  Pipeline.C  PostProcessorClassify.C  PostProcessorDetect.C  PostProcessorDetectYOLO.C  PostProcessorPython.C  PostProcessorSegment.C  PostProcessorYuNet.C  PreProcessor.C  PreProcessorBlob.C  PreProcessorPython.C  Utils.C
src/jevois/Debug/: Log.C  Profiler.C  PythonException.C  SysInfo.C  Timer.C  Watchdog.C
src/jevois/GPU/: GPUshader.C  GPUtextureDmaBuf.C  GUIeditor.C
